# aws-tools

./: .gitignore  README.md  flake.nix  pyproject.toml
scripts/: __init__.py  upload_route53_records.py
src/aws_tools/: __init__.py  dns_upload.py  reboot_ec2.py
