[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tools"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jordan Garrison", email = "jordan.garrison@flosports.tv"},
    {name = "Jordan Garrison", email = "jordangarrison@users.noreply.github.com"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "boto3>=1.28.0",
    "colorama>=0.4.6",
]

[project.scripts]
dns-upload = "scripts.upload_route53_records:main"

[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
]
