[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aws-tools"
version = "0.1.0"
description = "CLI utilities for working with AWS services"
authors = [
    {name = "Jordan Garrison", email = "jordan.garrison@flosports.tv"},
    {name = "Jordan Garrison", email = "jordangarrison@users.noreply.github.com"},
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "boto3>=1.28.0",
    "colorama>=0.4.6",
]

[project.scripts]
dns-upload = "aws_tools.dns_upload:main"
reboot-ec2 = "aws_tools.reboot_ec2:main"

[tool.pdm]
distribution = true
[tool.pdm.build]
includes = ["src/aws_tools"]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
]
